--- a/section/gettingStarted/landingPages.mdx
+++ b/section/gettingStarted/landingPages.mdx
@@ -16,7 +16,12 @@ Landing pages are a powerful tool for converting key communities and boosting yo
 
 ## Create Campaign landing pages
 <Tip>
+  While your brand is in draft mode, you will see all available verification groups with a preview banner in the top right. Once live only your selected groups will be visible.
+</Tip>
+
   Best practice is to create dedicated landing pages for your high-priority communities, like Key Workers and Students.
+
+
 
   To increase SEO traffic ensure that the group name and “discount” is mentioned.
 
@@ -25,7 +30,6 @@ Landing pages are a powerful tool for converting key communities and boosting yo
   - **Meta description:** We know that a little help goes a long way when you're a student. Verify your student status and you can get 10% off.
   - **Relevant Copy:** ~300 words talking about the campaign and why it's important to your audience.
 
-</Tip>
 
 <Frame caption="Farfetch's campaign pages drive evergreen revenue growth YoY.">
   <img
