--- a/section/promoteOffers/on-site-placements.mdx
+++ b/section/promoteOffers/on-site-placements.mdx
@@ -24,6 +24,10 @@ Out of the box, Gocertify supports three main types of on-site messages, but wit
 
 ## Managing on-site messaging
 
+<Tip>
+  Your on-site messages will only show if there are live offers available for the shopper. While your brand is still in setup you may not see your on-site messages.
+</Tip>
+
 You have full control of all your on-site messages via the [Gocertify dashboard](https://secure.gocertify.me/dashboard), including creating new placements, editing content and setting visibility rules.
 
 <Frame>
